force-app/main/default/objects/FF_Financial_Product__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>