force-app/main/default/objects/FF_Financial_Product__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>Only used in Direct Equity Holdings</inlineHelpText>
    <label>Company name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>