force-app/main/default/objects/FF_Financial_Product__c/fields/Custom_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Provider_Name__c</fullName>
    <description>If the client does not select a provider from our list, they can add a custom value. This field holds that value</description>
    <label>Custom provider name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>