force-app/main/default/objects/FF_Financial_Product__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <description>If populated, the related record will not be visible in the profile to the customer. This is a control implemented on the profile logic. This field captures the reason why it is hidden.</description>
    <inlineHelpText>Octopus products are hidden from the profile as they are visible in the dashboard.</inlineHelpText>
    <label>Hidden from profile reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deleted by Client</fullName>
            </value>
            <value>
                <fullName>Financial product status</fullName>
            </value>
            <value>
                <fullName>Octopus product</fullName>
            </value>
            <value>
                <fullName>Deleted by Internal User</fullName>
                <isActive>false</isActive>
                <label>Deleted by Internal User</label>
            </value>
            <value>
                <fullName>Removed From Household</fullName>
                <isActive>false</isActive>
                <label>Removed From Household</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>