force-app/main/default/objects/FF_Financial_Product__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <description>The type of product that the client will see.</description>
    <inlineHelpText>This is what the client will see under &quot;Type&quot;.</inlineHelpText>
    <label>Display type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Product_Subtypes</valueSetName>
    </valueSet>
</CustomField>