force-app/main/default/objects/FF_Financial_Product__c/fields/Expected_Annual_Income_on_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Income_on_Retirement__c</fullName>
    <label>Expected income on retirement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>