force-app/main/default/objects/FF_Financial_Product__c/fields/FF_Session__c.field-meta.xml
<CustomField>
    <fullName>FF_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FF session</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>FF Financial Products</relationshipLabel>
    <relationshipName>FF_Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>