force-app/main/default/objects/FF_Financial_Product__c/fields/Financial_Product__c.field-meta.xml
<CustomField>
    <fullName>Financial_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Financial product</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Financial Product History</relationshipLabel>
    <relationshipName>FF_Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>