force-app/main/default/objects/FF_Financial_Product__c/fields/Fixed_term__c.field-meta.xml
<CustomField>
    <fullName>Fixed_term__c</fullName>
    <label>Fixed term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>