force-app/main/default/objects/FF_Financial_Product__c/fields/Fixed_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Term_End_Date__c</fullName>
    <label>Fixed term end date</label>
    <type>Date</type>
</CustomField>