force-app/main/default/objects/FF_Financial_Product__c/fields/FP_ID_18__c.field-meta.xml
<CustomField>
    <fullName>FP_ID_18__c</fullName>
    <formula>CASESAFEID( Financial_Product__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FP ID 18</label>
    <type>Text</type>
</CustomField>