force-app/main/default/objects/FF_Financial_Product__c/fields/Income_on_Retirement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Income_on_Retirement_Frequency__c</fullName>
    <defaultValue>(&quot;Monthly&quot;)</defaultValue>
    <label>Income on retirement frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>