force-app/main/default/objects/FF_Financial_Product__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Joint owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Financial Products (Joint Owner)</relationshipLabel>
    <relationshipName>FF_Financial_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>