force-app/main/default/objects/FF_Financial_Product__c/fields/Notice_Period_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Duration_Days__c</fullName>
    <label>Notice period duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>