force-app/main/default/objects/FF_Financial_Product__c/fields/OW_pension_employment__c.field-meta.xml
<CustomField>
    <fullName>OW_pension_employment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field allows an employment record to be linked to a financial product and exists to link pensions to employment records where they are employer provided.</description>
    <inlineHelpText>The record linked her contains details of the employment where this pension is provided.</inlineHelpText>
    <label>Pension employment</label>
    <referenceTo>FinServ__Employment__c</referenceTo>
    <relationshipLabel>FF Financial Products</relationshipLabel>
    <relationshipName>Employer_pensions</relationshipName>
    <type>Lookup</type>
</CustomField>