force-app/main/default/objects/FF_Financial_Product__c/fields/Owner_match_id__c.field-meta.xml
<CustomField>
    <fullName>Owner_match_id__c</fullName>
    <description>The match ID of the owner of the product. We will use this field when we don&apos;t have access owner&apos;s Salesforce ID.

This will only be relevant for children person accounts within a household.</description>
    <label>Owner match ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>