force-app/main/default/objects/FF_Financial_Product__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Financial Products</relationshipLabel>
    <relationshipName>FF_Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>