force-app/main/default/objects/FF_Financial_Product__c/fields/Public_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Provider_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Public provider name</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>FF Financial Products</relationshipLabel>
    <relationshipName>FF_Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>