force-app/main/default/objects/FF_Financial_Product__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record type</label>
    <type>Text</type>
</CustomField>