force-app/main/default/objects/FF_Financial_Product__c/fields/RegisteredContact__c.field-meta.xml
<CustomField>
    <fullName>RegisteredContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The designated adult on a childs account</description>
    <label>Registered contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Financial Products (Registered contact)</relationshipLabel>
    <relationshipName>FF_Financial_Products3</relationshipName>
    <type>Lookup</type>
</CustomField>