force-app/main/default/objects/FF_Financial_Product__c/fields/Work_Benefit_2__c.field-meta.xml
<CustomField>
    <fullName>Work_Benefit_2__c</fullName>
    <label>Work benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>