force-app/main/default/objects/FF_Financial_Product__c/recordTypes/General_Investment.recordType-meta.xml
<RecordType>
    <fullName>General_Investment</fullName>
    <active>true</active>
    <label>General Investment</label>
</RecordType>