force-app/main/default/objects/FF_Financial_Product__c/recordTypes/ISA.recordType-meta.xml
<RecordType>
    <fullName>ISA</fullName>
    <active>true</active>
    <label>ISA</label>
</RecordType>