force-app/main/default/objects/FF_Financial_Product__c/validationRules/Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Custom_Provider_Name__c)) , 
ISBLANK(Public_Provider_Name__c), 
ISPICKVAL(Validated__c, &quot;Validated&quot;)
)</errorConditionFormula>
    <errorDisplayField>Public_Provider_Name__c</errorDisplayField>
    <errorMessage>You need to add a Public Provider Name, before you can Validate this record.</errorMessage>
</ValidationRule>