force-app/main/default/objects/FF_Financial_Product__c/validationRules/providerValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>providerValidation</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
AND(
NOT(ISBLANK(Custom_Provider_Name__c)) , 
ISBLANK(Public_Provider_Name__c), 
ISPICKVAL(Validated__c, &quot;Validated&quot;)
)</errorConditionFormula>
    <errorDisplayField>Public_Provider_Name__c</errorDisplayField>
    <errorMessage>You need to add a Public Provider Name, before you can Validate this record.</errorMessage>
</ValidationRule>