force-app/main/default/objects/FF_Financial_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Financial_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company_Name__c</columns>
    <columns>Custom_Provider_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>